Major edits to teaching.
* Teaching mostly complete?
* Organizing research
-- main points
-- add refs
-- major edits to first few paras

--- a/statements/statement_teaching.tex
+++ b/statements/statement_teaching.tex
@@ -14,51 +14,97 @@
 \maketitle
 \thispagestyle{empty}
 \linespread{1.25}\selectfont
-%% a statement of activities contributing to diversity, equity and inclusion in Academia
 
 My teaching philosophy is meaning-centered and skill-oriented.
-For both students and teachers, meaning begins with recognition.
-As such, my first criteria in lesson design
-is to find material that students can identify with,
-whether through popular culture, humor, or common human experience. 
-For example, I often use coin flips to illustrate topics in 
-randomness. Coin flips are commonly-experienced simple phenomena
-that can be used to illustrate a range of complex phenomena,  
-from Markov chains to the central limit theorem.
-I employ this comfort of the familiar to build towards insight,
-where a previously hidden relationship becomes revealed.
-Finally, I challenge students to pose questions based on
-their own interests and curiousity, and to strive towards 
-their own insights. This student-driven inquiry builds confidence, 
-while letting students take ownership of their own work.
-The intended result is that students internalize their explorations,
-committing to long-term memory not simply facts, but the full
-process of exploration and discovery.
+I teach and mentor students from a wide range of backgrounds, 
+many of whom lack strong mathematical or analytical skills. 
+In formal teaching and mentorship alike, I prioritize
+exploration and student ownership, while facilitating
+student development of conceptual and analytical expertise.
 
-This path of exploration and discovery is, necessarily, paved 
-with acquired skills, from simple data analysis and synthesis to 
-high-level mathematics or computer programming. I seek to facilitate 
-skill acquisition by providing frequent, incremental, and exploratory
-practice problems. I employ in-class exercises with physical props 
-and student interaction, short quizzes and surveys that emphasize 
-process over facts, and periodic written assignments.  For most assignments,
-I expect individual write-ups, while encouraging (and sometimes requiring) group
-collaboration. I find that this configuration fosters peer teaching, while maintaining 
-individual motivation and accountability. 
-In this way, I seek to provide a supportive environment in which student practice 
-is both expected and rewarded. 
+My initial focus in course design 
+is to find material that students can identify with,
+whether through popular culture, humor, or common human 
+experience. For example, I often use coin flips to 
+illustrate topics in randomness. A simple phenomenon 
+that students can both visualize and quickly test, 
+coin flips can nonetheless be used to illustrate a range 
+of complex phenomena, from Markov chains to the central limit 
+theorem. Such material provides a core vocabulary with 
+which more complex concepts can be comfortably explored.
+
+My next objective is to reveal previously hidden 
+relationship. One example involves 
+asking students to imagine searching for their keys 
+in one dimension,
+along a line or curve, versus two dimensions, a surface or
+table-top, versus a cluttered house.  Here we see the {\em 
+curse of dimensionality} in action, where a hypothetical 
+10-dimensional space can be imagined through it's search 
+complexity.  
+
+By posing carefully constructed
+questions, I challenge students to identify specific connections,
+both through collaborative exploration, as well as trial and error.
+For example, students can experimentally explore the relationship
+between sample size and estimate variance with dice. What is the 
+probability of rolling ``snake eyes''? Let's find out!
+This sort of tactile, student-centered exploration provides 
+a powerful companion to more analytical material, 
+helping increase student motivation and recall.
+
+Finally, I challenge students to pose novel questions based on
+their own interests and curiosity, and to thus strive 
+towards their own insights. 
+Such student-driven inquiry builds confidence, 
+while letting students take ownership of their own work.
+Student-driven data collection is one exercise that I've
+found particularly useful here; their project ownership is explicit,
+and the collected data can serve guide and facilitate student
+projects. The intended result is that students develop an investment 
+in the course and associated coursework, committing to long-term 
+memory not simply facts, but the full process of exploration and 
+discovery.
+
+This path of discovery is, necessarily, paved 
+with acquired skills, from routine data analysis to 
+high-level mathematics or computer programming. 
+In addition to in-class exercises with physical props 
+and student interaction, I also use short quizzes and surveys 
+that emphasize concept and process. Nonetheless, 
+successful development of quantitative skills requires 
+prolonged individual attention.  To this end, I 
+provide periodic, incremental practice problems
+that are both structured and exploratory.
+I expect individual write-ups, while encouraging (and sometimes 
+requiring) group collaboration; such a configuration provides 
+individual motivation and accountability, while fostering
+peer learning. In this way, I seek to provide a supportive 
+environment where student practice is both expected and rewarded. 
+Quizzes, surveys, and periodic written assignments
+also provide a critical source of feedback, 
+helping to identify struggling individuals or 
+problematic concepts.
+
+My approach to direct mentorship and graduate student
+training is similar, if more demanding.  I do not 
+require prerequisite mathematical or analytical skills,
+but I do require curiosity, enthusiasm, and engagement.
+I work with students to identify their interests 
+and goals, and then collaboratively develop a roadmap 
+to achieve those goals.
 
 The ``lightbulb experience'' of student insight is 
-deeply satisfying to both teacher and student. Such insights in turn 
-foster deeper exploration and discovery by increasing student confidence, 
-and by generating personal desire for deeper insight.
- Such insights can arise from the simple connections of two previously 
-unrelated ideas, such as between ``false positives'' 
-and humans' propensity to ``see monsters in the dark'',
-or from hard-won technical skills. As often, student insight comes not 
-in a flash, but in a slow accumulation of skills and connections, 
-leading to a greater vision that informs a student's life.  
-
+deeply satisfying to both teacher and student. 
+Whether from deep conceptual connections or a conquered
+technical hurdle, these insights ``Aha!'' moments
+increase student confidence, while generating thirst for more and 
+deeper insight.  Just as often, though, deep insight comes 
+from a slow accumulation of skills and connections that, 
+in turn, informs and is informed by a student's life.  
+Ultimately, my goal is to create a supportive environment 
+that fosters such personal growth through practice, 
+exploration, and discovery.
 
 \end{document}
 
