--- a/statements/statement_research.tex
+++ b/statements/statement_research.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt]{article}
+\usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 %\usepackage{url}
 \usepackage{hyperref}
 \usepackage[numbers, sort&compress]{natbib}
@@ -7,163 +8,118 @@
 %\usepackage{multicol}
 
 \author{Christian Gunning}
-\title{}
-\date{\today}
+\title{Research Program}
+%\date{\today}
 \begin{document}
+\maketitle
+\thispagestyle{empty}
+\linespread{1.25}\selectfont
+%% a statement of activities contributing to diversity, equity and inclusion in Academia
 
-My research employs simple mechanistic models and modern statistical inference 
-methods to reveal hidden patterns in natural dynamical systems.
-An organizing principle of my work is the integration of empirical 
-data with both statistical and mechanistic models.
+My research combines ecological theory, empirical observation, and 
+mechanistic models to arrive at unique insights into the processes 
+and patterns that shape biological populations and metapopulations. 
+My work explores the spatiotemporal dynamics of real-world populations,
+focusing on processes that are discrete, stochastic, and non-linear. 
+My core areas of study include stochastic extinction and persistence, 
+population response to perturbation, and metapopulation synchrony.
 My over-arching goal is to identify causal determinants of aggregate 
-system behavior using the simplest possible mechanistic models and 
-inferences methods. 
+system behavior using the simplest mechanistic modelspossible.
+%, and demographic founder events such
+%as colonization and development of resistance. 
 
-To date, I have focused primarily on populations
-of organisms that cause or transmit human diseases.
-I have studied a range of natural systems, 
-including human microparasites such as measles,
-and disease vectors such as the mosquito 
-\em{Aedes aegypti}.  In addition, I have extensive 
-experience incorporating abiotic dynamics such as weather
-and hydrology.
+We live in a world awash with data, a golden era
+of ecological observation, from the remote sensing 
+facilities of the National Science Foundation's National 
+Ecological Observatory Network, to next-generation sequencing technologies, 
+to citizen science initiatives such as the Cornell Lab of 
+Ornithology's eBird. 
+Indeed, one of my great strengths is the ability to 
+efficiently and reliably assimilate complex
+assemblages of empirical data into a cohesive whole.
+Yet translating this flood of data into {\em knowledge} remains challenging. Ecological
+systems are inherently non-linear and stochastic, 
+while observational processes are often poorly characterized. 
+My approach to this dilema 
+employs simple mechanistic simulation 
+models to {\em predict} dynamics from theory, 
+and probabilistic statistical models to match 
+observation to simulation.
+I also use macroecological, information-theoretic 
+approaches to identify deterministic needles in 
+these haystacks of entangled processes 
+and ``iterated noise''. 
 
+Much of my work to-date has focused on the childhood diseases 
+in pre-vaccine era U.S.\ cities and 
+states.  Human disease ecology provides an 
+attractive study system, 
+leveraging public health observational 
+infrastructure while 
+fulfilling the scientific imperative towards public benifit.
+As part of my Ph.D., I designed and coordinated a technology-assisted
+data entry program to transcribe historical U.S. 
+public health reports. The end result is more than 
+20 years of weekly measles and
+pertussis case reports in some 80 cities and 35 
+states, along with influenza case and death reports.
+I have used this dataset, along with detailed demographic records, to draw novel ecological insight into 
+disease processes. From the 
+effects of spatial and temoral aggregation on metapopulation stochastic
+extinction \citep{gunning2013probabilistic}, to the 
+effects of incomplete
+observation \citep{gunning2014conserved}, this system
+has yielded powerful insights into metapopulation 
+ecology and human health.
+Future projects in this system include a study of 
+the geographical and socioeconomic determinants of 
+the epidemic timing among populations 
+using wavelet analysis.  While previous research has 
+suggested spatial waves of pertussis incidence 
+in the U.S. \citep{choisy2012changing}, as well as 
+as modern socioeconomic roles in influenza spread \citep{viboud2006synchrony}, a detailed
+comparison between diseases in a single 
+metapopulation is lacking.
 
-At present, my core focus is on the interface 
-between deterministic and stochastic dynamics, 
-and between continuous and discrete systems.
-Natural populations are irreducibly composed of 
-organisms that exhibit a wide range of individual variation 
-and stochasticity.  This combination of discreteness and 
-stochasticity can have important dynamical consequences in
-small populations. In particular, both extinction and migration
-can hinge on the behaviors or outcomes of a very small
-number of individuals.
-Yet as aggregate \em{processes}, extinction and migration 
-are most parsimoniously described as population-level 
-outcomes. I employ
-probabilistic, distributional approaches to bridge 
-observations of the particular (individual-level) with 
-descriptions of the general (population-level).
-
-Biotic systems are also affected by 
-abiotic environments, which themselves
-exhibit stochasticity and 
-autocorrelation over a wide range of scales.
-Seasonality, for example, causes 
-yearly changes in temperature and sunlight
-over large spatial areas, while precipitation 
-commonly shows substantial clustering in 
-both space and time.  
-Widespread environmental variation provides both
-opportunity and challenge: opportunity in the form
-of natural experiments, and challenge in the form
-of increased complexity and added uncertainty.  
-Indeed, distinguishing exogenous forcing from 
-endogenous dynamics is a long-standing challenge 
-in population dynamics.
-
-Choosing an appropriate level of mechanistic modeling is a key 
-challenge in all sciences.  In natural populations, for example, a
-a continuous-time deterministic
-2-species predator-prey model (analogous to a frictionless pendulum) 
-neglects biological realism in favor of 
-analytic tractablility.  On the other hand, highly detailed 
-and potentially more realistic agent-based models
-quickly grow too complex to identify mechanistic links 
-between cause and effect.  
-
-Broadly speaking, I prefer parsimonious ``strategic'' models 
-over kitchen-sink ``tactical'' models. My work favors an intermediate 
-level of modeling that explicitly includes stochasticity and 
-discreteness, while favoring memoryless Markovian dynamics of 
-classic differential equations models over  
-more complex state-dependent dynamics. 
-
-\section*{Tools}
-In my role as a data-driven researcher, I rely on time-tested
-computational tools. The R programming language provides me with a
-unifying core for data assimilation, visualization, statistical
-modeling, simulation prototyping, and reproducible manuscript 
-preparation.   
-I use SQL (and Postgresql in particular) for data management, 
-including complex geospatial GIS data. To the extent possible, I  
-employ data management best-practices to facilitate reproducibility,
-interoperability, and scalability.
-
-I commonly use R for (generalized) linear modeling, as well as 
-parametric and non-parametric bootstrapping. I also 
-employ time series analysis tools, including Fourier 
-and wavelet transforms and ARIMA models.
-
-I use both R and C++ to rapidly construct, simulate, and
-analyze mechanistic models. Common model structures include 
-discrete formulations of compartment epidemiological models 
-(``SIR'' models) that are coupled into metapopulations.
-
-Altogether, modern computational tools allow me to
-assimilate large and complex datasets, simulate mechanistic
-models, and conduct inference with great efficiency and fidelity.
-
-\section*{Summary}
-Inexorable technological development
-in computation and data acquisition
-provides increasingly powerful tools to
-elucidate interactions between individual-level
-population-level dynamics. 
-Novel computational hardware and methods ease model 
-development and simulation, while citizen science, remote
-sensing tools, and novel genomic methods have accelerated
-data collection. As such, a rich trove of both data and 
-tools are now available to explore pressing modern concerns
-in population dynamics, including disease elimination, 
-pest control, native species extinction, 
-and non-native species 
-invasion.  Consequently, the ability to rapidly 
-integrate novel datasets and mechanistic simulations 
-is more important now than ever before.
-
-The overarching goal of my work is to unveil the causal 
-determinants of each system's aggregate behavior, which in
-turn is an interplay between randomness and determinism.
-My work draws inspiration from Robert May, who popularized  
-the fact that ``simple models can display complex behaviors'', 
-and from macroecology and information theory, which describe how 
-predictable, low-dimensional patterns can emerge from the 
-aggregate dynamics of complex systems.  I seek to reconcile
-these approaches: I use simple probabilistic metrics to 
-describe natural systems, and simple mechanistic 
-models to explain their complex behaviors.
+In my post-doctoral studies, I have leveraged my 
+data analytic and modelling expertise towards
+vector biology as part of the large, multi-agency
+Projecto Dengue in Iquitos, Peru. 
+I have also, in collaboration with lab graduate
+students, explored models
+combining population dynamics with genetics to 
+understand, for example, the consequences of 
+possible insect release strategies as part of 
+vector control campaigns.  
 
 
-%\maketitle
-
-\section{}
-
-%\bibliographystyle{plainnat}
-	% plain.bst included standard in latex
-%\bibliography{$DOCHOME/BIB/bemp}
-	% sample.bib is user-created biblio info
-	% use \citep or \citet*, etc.
 
 
-\end{document}
+%As a quantitative ecologist, I draw 
+%methodology and metaphor from a range of disciplines, including 
+%chemistry, physics, probability theory, and computer science.
+%From Markov processes and ergodic theory to information theory 
+%and statistical modeling, I employ a diverse yet robust 
+%conceptual toolset to 
 
+Interdisciplinary collaboration relies upon a firm
+foundation in one's own area of expertise, along
+with a curiousity, trust, and willingness to learn
+from other experts.
 
-	%\begin{multicols}{2}
-    % \tableofcontents
-    % \\ Newline, \\* Newline-without-pagebreak
-    % \newpage \pagebreak paginates
-    % \mbox prohibits linebreak, \fbox same w/visible box
-    % `` these are quotes '' and \@. this ends an uppercase sentence
-    % - -- --- are different
-    % Text styles \emph{} or {\em ... }, {\small  }, {\large  }
-    % \begin{quote} \end{quote}
-%-----Example Figure Follows
-%\begin{figure}
-%  \begin{center}
-%    \includegraphics[width=5.5in]{eps/N-layout-fin.eps}
-%  \end{center}
-%  \caption{\small Overview of North Site 1km Buffers with Dams and USGS River Guages}
-%  \label{fig-overview}
-%\end{figure}
+My research is facilitated by cutting-edge quantitative tools:
+the R and C++ programming languages for data visualization,
+numerical simulation, and statistical modeling, as well as SQL for 
+advanced data management. Through my ongoing 
+collaboration with professional software developers,
+I have learned the power of IT industry best 
+practices \citep{}, including source code control,
+testing framework, and quality documentation.
+
+Finally, I am a strong proponent in open, 
+reproducible research. 
+I use reproducible research best practices 
+to maximize work efficiency and quality, and increase
+the ability for others to quickly and faithfully 
+build upon my work, thus increasing its impact
+on society at large.
