--- a/statements/statement_research.tex
+++ b/statements/statement_research.tex
@@ -112,9 +112,8 @@ the R and C++ programming languages for data visualization,
 numerical simulation, and statistical modeling, as well as SQL for 
 advanced data management. Through my ongoing 
 collaboration with professional software developers,
-I have learned the power of IT industry best 
-practices \citep{}, including source code control,
-testing framework, and quality documentation.
+I have learned the power of software
+development industry best practices \citep{spolsky2000joel}.
 
 Finally, I am a strong proponent in open, 
 reproducible research. 
@@ -123,3 +122,5 @@ to maximize work efficiency and quality, and increase
 the ability for others to quickly and faithfully 
 build upon my work, thus increasing its impact
 on society at large.
+
+\end{document}
