Minor edits to cv
* Add josh
* Add sewer paper
* Dagger for mentee author
* Add bib to research statement

--- a/cv/cv_201609.tex
+++ b/cv/cv_201609.tex
@@ -109,8 +109,9 @@ D.M. Smith, D.M. Finch, {\bf C.E. Gunning}, R. Jemison, J.F. Kelly (2009). Post-
 \end{rSection}
 
 \begin{rSection}{Pending Publications}
+Mentee co-author: $\dagger$
 
-M.R. Vella, {\bf C.E. Gunning}, A.L. Lloyd, F. Gould.
+M.R. Vella$\dagger$, {\bf C.E. Gunning}, A.L. Lloyd, F. Gould.
 Evaluating strategies for reversing CRISPR-Cas9 gene drives.
 Nature Biotechnology, In Review.
 
@@ -122,6 +123,9 @@ in Iquitos, Peru. In Prep.
 
 {\bf C.E. Gunning}, M.J Ferrari, E. Erhardt, H.J. Wearing.
 Evidence of cryptic incidence in childhood diseases. In Prep.
+
+J. Nightingale$\dagger$, M. Holstad, {\bf C.E. Gunning}.
+Temperature-dependence in sewer blockage frequency. In Prep.
 
 \end{rSection}
 
@@ -159,13 +163,13 @@ Biochemistry and Molecular Biology}{Athens, GA}
 \end{rSection}
 
 \begin{rSection}{Grants}
-\item Jun 2011 (\$2,000). UNM PiBBS Student Enrichment Opportunities Grant to
+\item Jun 2011 (\$2,000). UNM PiBBS Student Enrichment Opportunities Grant to attend SFI Complex Systems Summer School.
 \item May 2010 (\$500). EEID Conference Workshop travel grant.
 \item Mar 2010 (\$80,000). Center for Evolutionary \& Theoretical Immunology (CETI) Seed
 Grant, Waning Immunity in Influenza and Whooping Cough,
 Contributing author.
 \item Aug 2009 ($\approx$\$50,000). Program in Interdisciplinary Biological and Biomedical
-Sciences (PIBBS) 2 year fellowship.
+Sciences (PIBBS), 2 year fellowship.
 \item May 2007 (\$4,400). UNM Graduate Research and Development grant, Hydrological
 research in the Middle Rio Grande Bosque. 
 \end{rSection}
@@ -173,8 +177,7 @@ research in the Middle Rio Grande Bosque.
 \begin{rSection}{Awards}
 \item Apr 2013 (\$500). UNM Biology Department Scholarship.
 \item Apr 2013. Graduate oral presentation, $2^{nd}$ place. UNM Biology Research Day.
-attend SFI Complex Systems Summer School.
-\item Apr 2010 (\$500). UNM SRAC travel grant to attend useR2010.
+\item Apr 2010 (\$500). UNM SRAC travel grant to attend useR 2010.
 \item Apr 2010.  Graduate poster presentation, $1^{st}$ place. UNM Biology Research Day.
 \end{rSection}
 
@@ -215,7 +218,6 @@ in the Middle Rio Grande Bosque, Water Year 2006. National
 Groundwater Association (NGWA) Conference. Albuquerque, NM. May 2007. 
 \end{rSection}
 
-\clearpage
 %------------------------------------------------
 \begin{rSection}{Teaching}
 \subhead{Instructor}
@@ -267,6 +269,8 @@ Disease conference
 \item Spring 2015 - present. Robert Liberatore, Math Education Software Developer
 \item Fall 2015 - present. Michael Vella, NCSU Mathematics Ph.D. Student
 \item Fall 2015 - Fall 2016. Gabriel Zilnik, NCSU Entomology Masters Student
+\item Fall 2015 - Fall 2016. Gabriel Zilnik, NCSU Entomology Masters Student
+\item Fall 2012 - Fall 2015. Joshua Nightingale, UNM Biology Undergraduate Student
 \item Spring 2011 - Spring 2012. Nathan Cournoyer, UNM Biology Undergraduate Student
 \end{rSection}
 
@@ -314,6 +318,7 @@ distribution estimation.
 \item 2010-2011. Contributor to \texttt{xts} and \texttt{zoo}: R packages for time series handling and analysis.
 \end{rSection}
 
+\clearpage
 
 \begin{rSection}{References}
 \begin{rSubsection}{Alun Lloyd}{}{Department of Mathematics}{North Carolina State University}
