--- a/statements/statement_research.tex
+++ b/statements/statement_research.tex
@@ -3,6 +3,7 @@
 %\usepackage{url}
 \usepackage{hyperref}
 \usepackage[numbers, sort&compress]{natbib}
+\bibliographystyle{abbrvnat}
 %\usepackage{citeref}  %Not avail on linux.unm.edu; makes page #s in biblio
 %\usepackage{graphicx}
 %\usepackage{multicol}
@@ -122,5 +123,7 @@ to maximize work efficiency and quality, and increase
 the ability for others to quickly and faithfully 
 build upon my work, thus increasing its impact
 on society at large.
+
+\bibliography{statement}
 
 \end{document}
