--- a/statements/statement_diversity.tex
+++ b/statements/statement_diversity.tex
@@ -18,28 +18,72 @@
 \linespread{1.25}\selectfont
 
 My approach to fostering equity and inclusion in academia 
-is rooted in the so-called ``imposter syndrome''.  When surrounded by 
+is rooted in the so-called ``imposter syndrome'', wherein 
+qualified individuals undervalue their own abilities and 
+achievements relative to others.  When surrounded by 
 teachers and mentors who look and act like us, it's easy to 
 see ourselves {\em becoming} them.  Yet lacking such supportive 
 social and environmental queues, we often respond with excessively
-harsh critiques of ourselves. Indeed, talented critical thinkers often 
-excel at self-criticism to their own detriment.
-As an educator and mentor, I see my role as helping
-bridge this confidence gap.
+harsh critiques of ourselves. Indeed, skilled scientists
+{\em excel} at self-criticism, often to their own detriment.
+As an educator and mentor, I see my role as building 
+core competence, and in helping
+bridge gaps between competence and confidence.
 
-In the fight against imposter syndrome, I view three 
-elements as crucial: enthusiasm, competence, and ownership.
-First, employing hands-on
-activities and salient modern-day examples helps build student engagement.
-Second, homework: by regularly completing goal-oriented assignments, 
-students build a sense of accomplishment, along with the habit of 
-breaking large tasks up into small pieces.  Finally, opportunities
-for student input in the form of surveys, data generation, and 
-self-selected final projects all provide students with a sense 
+I view three elements as crucial to building robust student 
+self-confidence: enthusiasm, 
+competence, and ownership.  First off, enthusiasm is born from both 
+curiousity and familiarity. Less priviledged and less prepared
+students are at greater risk from disengagement during dry, abstract
+recitations. From the start, I build student engagement 
+through exploratory physical activities involving peer interaction.
+I draw examples from current events and common 
+human experience, and employ multimedia visual aids, including 
+XKCD cartoons and segments from professionally produced
+video series (.e.g., Crash Course Biology). 
+This supports students with a range of learning styles, while
+providing engaging material for students to consult outside 
+of lecture. Altogether, my goal is to provide accessible and 
+memorable classes, which aids can increase class attendence for 
+at-risk students.
+
+My second main goal is skill mastery. 
+Here I aim to challenge students without intimidating
+them. I regularly provide goal-oriented assignments 
+that build core quantitative and critical thinking skills 
+through a series of manageable steps. I emphasize
+fairness and a sense of structure, making expectations 
+both reasonable and clear. I also strive to provide
+support for less-prepared students, including review
+sessions and through institution resources. One 
+strategy that I've found particularly 
+useful is the informal peer mentoring provided by 
+assigning students into small (2-3 person)
+study groups. They are {\em requested} to work on
+assignments together in these groups, and then provide
+individual write-ups. This arrangement provides 
+students with a degree of ``social accountability'' where
+they can seek informal peer assistance, while still 
+providing indidual accountability. In addition, such peer 
+mentorship can build mentorship skills in individuals who
+might not otherwise have such opportunities.
+
+Finally, I provide frequent opportunities
+for student input, including surveys, student-generated data, 
+and self-selected final projects.  Active student involvement 
+in the learning process provide students with a sense 
 of participation and belonging. 
 
-As an educator at a minority-serving institution in
-a historically poor state, I have also grappled with the powerful
+As a mentor, I actively seek out students with strong work 
+ethics and a thirst for achievement. I view confidence and 
+analytical background as skills that can be gained, whereas
+
+As such, I seek students
+who {\em lack} a sense of entitlement. 
+
+As an educator at the University of New Mexico, a 
+minority-serving institution in
+a historically poor state, I have grappled with the powerful
 impacts of socioeconomic inequality on student achievement. 
 These deep structural inequalities affect students in more 
 and less obvious ways, from financial ability to pursue higher 
@@ -51,17 +95,25 @@ appreciation of the challenges less privileged students confront
 simply to arrive in the classroom can increase students'
 comfort levels, freeing them to take ownership of their educations.
 I also encourage students to connect with each other,
-and to proactively seek support.
+and to proactively seek support. Finally, I 
+regularly solicit (optionally anonymous) feedback 
+from students via online surveys, thus provides a 
+secure, private channel through which to address discomforts 
+and concerns.
 
-Ultimately, increasing academic diversity and inclusion must 
-come largely from {\em maintaining} diversity, and pushing back
-against a culture of exclusion. At every career stage, a
-significant attrition of diversity has long been 
+Throughout my graduate student career, 
+I witnessed too many instances of implicit and explicit 
+discrimination, often by well-meaning scientist who were 
+unaware of the intense discomfort they created. 
+Ultimately, increased academic diversity and inclusion must 
+come largely from {\em maintaining} existing diversity, and 
+pushing back against a culture of exclusion. At every career 
+stage, a significant attrition of diversity has long been 
 evident. A culture of inclusion begins first with a sense of 
 purpose and belonging. I seek to foster such an inclusive 
 environment both by explicitly addressing the myriad unique 
 challenges and 
-assets that each individual brings to the table, as well as 
+assets that each individual brings to the table, and by
 providing a consistent pedagogical framework to foster 
 engagement of students from all backgrounds. 
 
