Major edits from nat comments

--- a/statements/statement_diversity.tex
+++ b/statements/statement_diversity.tex
@@ -31,55 +31,53 @@ core competence, and in helping
 bridge gaps between competence and confidence.
 
 I view three elements as crucial to building robust student 
-self-confidence: enthusiasm, 
+self-confidence and lasting involvement in academia: enthusiasm, 
 competence, and ownership.  First off, enthusiasm is born from both 
-curiousity and familiarity. Less priviledged and less prepared
+curiosity and familiarity, while less privileged and less prepared
 students are at greater risk from disengagement during dry, abstract
 recitations. From the start, I build student engagement 
 through exploratory physical activities involving peer interaction.
 I draw examples from current events and common 
 human experience, and employ multimedia visual aids, including 
 XKCD cartoons and segments from professionally produced
-video series (.e.g., Crash Course Biology). 
+video series (e.g., Crash Course Biology). 
 This supports students with a range of learning styles, while
 providing engaging material for students to consult outside 
 of lecture. Altogether, my goal is to provide accessible and 
-memorable classes, which aids can increase class attendence for 
+memorable classes, which aids can increase class attendance for 
 at-risk students.
 
 My second main goal is skill mastery. 
-Here I aim to challenge students without intimidating
+I aim to challenge students without intimidating
 them. I regularly provide goal-oriented assignments 
 that build core quantitative and critical thinking skills 
 through a series of manageable steps. I emphasize
-fairness and a sense of structure, making expectations 
-both reasonable and clear. I also strive to provide
-support for less-prepared students, including review
-sessions and through institution resources. One 
-strategy that I've found particularly 
-useful is the informal peer mentoring provided by 
-assigning students into small (2-3 person)
-study groups. They are {\em requested} to work on
-assignments together in these groups, and then provide
-individual write-ups. This arrangement provides 
-students with a degree of ``social accountability'' where
-they can seek informal peer assistance, while still 
-providing indidual accountability. In addition, such peer 
-mentorship can build mentorship skills in individuals who
-might not otherwise have such opportunities.
+fairness and a sense of structure, providing clear 
+and achievable expectations. I strive to provide
+support for less-prepared students via a number 
+of avenues, including institutional resources and 
+targeted review sessions. A particularly useful
+strategy that I've employed is informal (but 
+required) peer mentoring, where students are
+assigning into small, 2-3 person study groups. Students
+are asked to collaborate on assignments with group
+members, and then submit individual, written reports
+This arrangement provides students with ``social 
+accountability'' and routes for informal peer 
+assistance, while still providing individual accountability. 
+This arrangement also builds mentorship skills in 
+individuals who might not otherwise have such opportunities.
 
-Finally, I provide frequent opportunities
-for student input, including surveys, student-generated data, 
-and self-selected final projects.  Active student involvement 
-in the learning process provide students with a sense 
-of participation and belonging. 
-
-As a mentor, I actively seek out students with strong work 
-ethics and a thirst for achievement. I view confidence and 
-analytical background as skills that can be gained, whereas
-
-As such, I seek students
-who {\em lack} a sense of entitlement. 
+My final goal is to build student engagement through direct
+ownership. I provide frequent opportunities
+for student input, including surveys and student-generated 
+data collection. These ongoing opportunities are then 
+used to guide students in selecting final project topics.
+When given the choice, students frequently select topics 
+of study with direct applicability in their day-to-day lives. 
+This leads to a high level of engagement, and provides
+a sense of participation and belonging in the academic
+and intellectual process.
 
 As an educator at the University of New Mexico, a 
 minority-serving institution in
@@ -101,6 +99,15 @@ from students via online surveys, thus provides a
 secure, private channel through which to address discomforts 
 and concerns.
 
+As a mentor, I actively seek out students with strong work 
+ethics and a thirst for achievement. I have witnessed numerous 
+non-traditional students enter academia with high levels 
+of discipline and motivation gained from extensive
+employment experience, and yet lacking confidence in 
+their own intellectual abilities. I view confidence 
+and analytical background as skills to be gained, and
+actively seek such ``thirsty'' individuals as mentees.
+
 Throughout my graduate student career, 
 I witnessed too many instances of implicit and explicit 
 discrimination, often by well-meaning scientist who were 
@@ -110,12 +117,11 @@ come largely from {\em maintaining} existing diversity, and
 pushing back against a culture of exclusion. At every career 
 stage, a significant attrition of diversity has long been 
 evident. A culture of inclusion begins first with a sense of 
-purpose and belonging. I seek to foster such an inclusive 
-environment both by explicitly addressing the myriad unique 
-challenges and 
-assets that each individual brings to the table, and by
-providing a consistent pedagogical framework to foster 
-engagement of students from all backgrounds. 
+purpose and belonging. I seek to foster an inclusive 
+environment by explicitly addressing the myriad unique 
+challenges and assets that each individual brings to the 
+table, and by providing a consistent pedagogical framework 
+to foster academic excellence and ownership.
 
 \end{document}
 
