--- a/statements/statement_teaching.tex
+++ b/statements/statement_teaching.tex
@@ -15,81 +15,103 @@
 \thispagestyle{empty}
 \linespread{1.25}\selectfont
 
-My teaching philosophy is meaning-centered and skill-oriented.
-I teach and mentor students from a wide range of backgrounds, 
-many of whom lack strong mathematical or analytical skills. 
-In formal teaching and mentorship alike, I prioritize
-exploration and student ownership, while facilitating
-student development of conceptual and analytical expertise.
+My teaching philosophy is meaning-centered and skill-oriented.  Whether teaching
+programming to biology graduate students, probability and statistics to biology
+under-graduates, or introductory biology to non-major undergraduates, I
+prioritize curiosity and exploration.  I cultivate strong analytical skills
+through regular assignments that give students the tools and confidence to build
+successful academic careers. Ultimately, I seek to develop student ownership of
+the academic experience through engagement and self-determination.
 
-My initial focus in course design 
-is to find material that students can identify with,
-whether through popular culture, humor, or common human 
-experience. For example, I often use coin flips to 
-illustrate topics in randomness. A simple phenomenon 
-that students can both visualize and quickly test, 
-coin flips can nonetheless be used to illustrate a range 
-of complex phenomena, from Markov chains to the central limit 
-theorem. Such material provides a core vocabulary with 
-which more complex concepts can be comfortably explored.
+In designing curricula, I first seek out material that students can identify with,
+whether through popular culture, humor, or common human experience.  I
+frequently employ multimedia visual aids, such as XKCD cartoons and segments
+from professionally produced video series (e.g., Crash Course Biology).  This
+supports students with non-traditional learning styles, and provides
+supplemental learning material that students can review at their leisure. In
+this way, I aim for immediate and sustained student engagement and lecture 
+participation.
 
-My next objective is to reveal previously hidden 
-relationship. One example involves 
-asking students to imagine searching for their keys 
-in one dimension,
+To foster student engagement, I also frequently employ
+ tangible examples and exploratory ``active learning'' exercises.
+In non-major biology classes, for example, a simple 
+``mating'' game that uses standard playing cards was met 
+with great enthusiasm.  Here, the genome of each ``parent'' 
+is a single color, with suites representing grandparent genomes.
+Random assortment quickly reveals that offspring always are
+evenly matched in color (parent), but differ widely in the 
+relative contribution of grandparents.  In more technically
+sophisticated classes, I frequently use coin flips to
+illustrate topics in randomness (side-note: 
+pennies are inexpensive, abundantly available, and endlessly 
+amusing teaching aids).
+Using coin flips, students can explore a range 
+of complex phenomena, from memory-less Markov chains to the 
+central limit theorem.  These physical activities provide
+``tangible metaphors'' that are 
+accessible to students from a wide range of backgrounds, 
+and provide a core vocabulary with which to explore more 
+complex topics.
+
+Inquiry-based learning forms a central role in my teaching.
+I regularly pose carefully constructed 
+questions that challenge students to identify hidden connections. 
+One example involves asking students to imagine searching for 
+their keys in one dimension,
 along a line or curve, versus two dimensions, a surface or
 table-top, versus a cluttered house.  Here we see the {\em 
 curse of dimensionality} in action, where a hypothetical 
-10-dimensional space can be imagined through it's search 
+10-dimensional space can be imagined through its search 
 complexity.  
-
-By posing carefully constructed
-questions, I challenge students to identify specific connections,
-both through collaborative exploration, as well as trial and error.
-For example, students can experimentally explore the relationship
-between sample size and estimate variance with dice. What is the 
+I also emphasize collaborative exploration, as well as trial and error.
+For example, students can use dice to experimentally explore the 
+relationship between variance and sample size. What is the 
 probability of rolling ``snake eyes''? Let's find out!
+Teams of students will race to conduct experiments, and then 
+each team's results are collected and compared.
 This sort of tactile, student-centered exploration provides 
 a powerful companion to more analytical material, 
 helping increase student motivation and recall.
-
-Finally, I challenge students to pose novel questions based on
-their own interests and curiosity, and to thus strive 
-towards their own insights. 
-Such student-driven inquiry builds confidence, 
-while letting students take ownership of their own work.
-Student-driven data collection is one exercise that I've
-found particularly useful here; their project ownership is explicit,
-and the collected data can serve guide and facilitate student
-projects. The intended result is that students develop an investment 
-in the course and associated coursework, committing to long-term 
-memory not simply facts, but the full process of exploration and 
-discovery.
 
 This path of discovery is, necessarily, paved 
 with acquired skills, from routine data analysis to 
 high-level mathematics or computer programming. 
 In addition to in-class exercises with physical props 
-and student interaction, I also use short quizzes and surveys 
-that emphasize concept and process. Nonetheless, 
-successful development of quantitative skills requires 
-prolonged individual attention.  To this end, I 
-provide periodic, incremental practice problems
-that are both structured and exploratory.
-I expect individual write-ups, while encouraging (and sometimes 
-requiring) group collaboration; such a configuration provides 
-individual motivation and accountability, while fostering
-peer learning. In this way, I seek to provide a supportive 
-environment where student practice is both expected and rewarded. 
-Quizzes, surveys, and periodic written assignments
+and student interaction, I also use frequent short quizzes 
+that emphasize concept and process. 
+Quantitative skill development also requires 
+regular practice. To this end, I regularly provide 
+goal-oriented assignments that develop quantitative and 
+critical thinking skills through a series of manageable steps. 
+I provide clear expectations, and expect individual write-ups, 
+while encouraging (and often requiring) group collaboration. 
+In this way, I maintain individual accountability, while fostering
+peer learning. Quizzes and written assignments
 also provide a critical source of feedback, 
 helping to identify struggling individuals or 
 problematic concepts.
 
+Finally, I challenge students to pose novel questions based on
+their own interests and curiosity, and to strive 
+towards their own insights. 
+Student-driven inquiry builds confidence, 
+while letting students take ownership of their own work.
+I have successfully used online surveys to facilitate student 
+data collection. By encouraging students to collect data that 
+is personally interesting and meaningful, they gain ownership
+of the process and the product.
+The data thus collected can then facilitate student
+projects. As a result, students develop a personal investment 
+in the course, committing to long-term memory not simply facts, 
+but the full process of exploration and discovery.
+
 My approach to direct mentorship and graduate student
-training is similar, if more demanding.  I do not 
+training is similar, if more demanding. I do not
 require prerequisite mathematical or analytical skills,
 but I do require curiosity, enthusiasm, and engagement.
+Indeed, I actively solicit students with 
+non-traditional backgrounds who have developed 
+independence and discipline outside of academia.
 I work with students to identify their interests 
 and goals, and then collaboratively develop a roadmap 
 to achieve those goals.
@@ -97,14 +119,14 @@ to achieve those goals.
 The ``lightbulb experience'' of student insight is 
 deeply satisfying to both teacher and student. 
 Whether from deep conceptual connections or a conquered
-technical hurdle, these insights ``Aha!'' moments
-increase student confidence, while generating thirst for more and 
-deeper insight.  Just as often, though, deep insight comes 
+technical hurdle, these ``Aha!'' moments
+increase student confidence, and generate thirst for 
+deeper insight.  Just as often, deep insight comes 
 from a slow accumulation of skills and connections that, 
 in turn, informs and is informed by a student's life.  
-Ultimately, my goal is to create a supportive environment 
-that fosters such personal growth through practice, 
-exploration, and discovery.
+Ultimately, my goal is to create a supportive, stimulating,
+and challenging environment that fosters personal growth 
+through practice, exploration, and discovery.
 
 \end{document}
 
