Edits - adding, edit for flow

--- a/statements/statement_research.tex
+++ b/statements/statement_research.tex
@@ -17,58 +17,49 @@
 \linespread{1.25}\selectfont
 %% a statement of activities contributing to diversity, equity and inclusion in Academia
 
-My research combines ecological theory, empirical observation, and 
-mechanistic models to arrive at unique insights into the processes 
+I combine ecological theory, empirical observation, and 
+mechanistic models to explore the processes
 and patterns that shape biological populations and metapopulations. 
-My work explores the spatiotemporal dynamics of real-world populations,
-focusing on processes that are discrete, stochastic, and non-linear. 
-My core areas of study include stochastic extinction and persistence, 
+I am most interested in spatiotemporal dynamics of real-world populations,
+particularly discrete, stochastic, and non-linear processes.
+To date, my study systems have included human childhood diseases, along
+with the {\em Aedes aegypti} mosquito. Using historical observations, along with
+modern field trials, I have explored drivers of
+stochastic extinction and persistence,
 population response to perturbation, and metapopulation synchrony.
-My over-arching goal is to identify causal determinants of aggregate 
-system behavior using the simplest mechanistic modelspossible.
+Throughout, I seek the causal determinants of aggregate 
+system behavior using the simplest possible explanations.
 %, and demographic founder events such
 %as colonization and development of resistance. 
 
-We live in a world awash with data, a golden era
-of ecological observation, from the remote sensing 
-facilities of the National Science Foundation's National 
-Ecological Observatory Network, to next-generation sequencing technologies, 
-to citizen science initiatives such as the Cornell Lab of 
-Ornithology's eBird. 
-Indeed, one of my great strengths is the ability to 
-efficiently and reliably assimilate complex
-assemblages of empirical data into a cohesive whole.
-Yet translating this flood of data into {\em knowledge} remains challenging. Ecological
-systems are inherently non-linear and stochastic, 
+Ecological systems are inherently non-linear and stochastic,
 while observational processes are often poorly characterized. 
-My approach to this dilema 
-employs simple mechanistic simulation 
-models to {\em predict} dynamics from theory, 
-and probabilistic statistical models to match 
-observation to simulation.
-I also use macroecological, information-theoretic 
-approaches to identify deterministic needles in 
-these haystacks of entangled processes 
-and ``iterated noise''. 
+To identify deterministic needles in these haystacks of 
+entangled processes and ``iterated noise'',
+I use simple mechanistic simulation models to 
+{\em predict} dynamics from theory, and probabilistic 
+statistical models to match observation to simulation.
+I also use macroecological approaches to identify 
+conserved invariant scaling relationships between 
+observables, along with the theoretical drivers of these
+relationships.
 
-Much of my work to-date has focused on the childhood diseases 
-in pre-vaccine era U.S.\ cities and 
-states.  Human disease ecology provides an 
+To date, much of my work has focused on childhood diseases 
+in the pre-vaccine era. Human disease ecology provides an 
 attractive study system, 
-leveraging public health observational 
-infrastructure while 
+leveraging public health observational infrastructure while 
 fulfilling the scientific imperative towards public benifit.
-As part of my Ph.D., I designed and coordinated a technology-assisted
-data entry program to transcribe historical U.S. 
+As part of my Ph.D. work at the University of New Mexico with
+Dr. Helen Wearing, I designed and implemented a 
+technology-assisted data entry program to transcribe historical U.S. 
 public health reports. The end result is more than 
 20 years of weekly measles and
 pertussis case reports in some 80 cities and 35 
 states, along with influenza case and death reports.
-I have used this dataset, along with detailed demographic records, to draw novel ecological insight into 
-disease processes. From the 
+I have used this dataset, along with detailed demographic records, to draw 
+novel ecological insight into disease processes. From the 
 effects of spatial and temoral aggregation on metapopulation stochastic
-extinction \citep{gunning2013probabilistic}, to the 
-effects of incomplete
+extinction \citep{gunning2013probabilistic}, to the effects of incomplete
 observation \citep{gunning2014conserved}, this system
 has yielded powerful insights into metapopulation 
 ecology and human health.
@@ -78,21 +69,58 @@ the epidemic timing among populations
 using wavelet analysis.  While previous research has 
 suggested spatial waves of pertussis incidence 
 in the U.S. \citep{choisy2012changing}, as well as 
-as modern socioeconomic roles in influenza spread \citep{viboud2006synchrony}, a detailed
-comparison between diseases in a single 
+as modern socioeconomic roles in influenza spread \citep{viboud2006synchrony}, 
+a detailed comparison between diseases in a single 
 metapopulation is lacking.
 
-In my post-doctoral studies, I have leveraged my 
-data analytic and modelling expertise towards
-vector biology as part of the large, multi-agency
-Projecto Dengue in Iquitos, Peru. 
-I have also, in collaboration with lab graduate
-students, explored models
-combining population dynamics with genetics to 
-understand, for example, the consequences of 
-possible insect release strategies as part of 
-vector control campaigns.  
+My post-doctoral work has focused on the 
+population ecology and vector biology of the 
+{\em Aedes aegypti} mosquito,
+with Drs. Fred Gould and Alun Lloyd at 
+North Carolina State University. I am an
+active participant in the large, multi-agency
+Projecto Dengue in Iquitos, Peru, led by Dr.
+Tom Scott of UC Davis. Here, I 
+have provided leadership in reconciling complex data 
+streams from spray control field trials, as well as
+in statistical analysis and manuscript preparation.
+In this system, we see the emergence 
+of insecticide resistence, along with signatures of  
+non-linear, density-dependent feedback resulting 
+from human perturbation. I also plan on further  
+collaboration with Dr. Gould's graduate student 
+Jennifer Baltzegar to use modern genotype by 
+sequencing methods to explore patterns of local 
+migration, census population size, and the 
+population response to perturbation by human 
+vector control. 
 
+We live in a world awash with data. From the remote sensing 
+facilities of the National Science Foundation's National 
+Ecological Observatory Network, to next-generation 
+sequencing technologies, to citizen science initiatives 
+such as the Cornell Lab of Ornithology's eBird,
+this is a golden era of ecological observation. 
+Yet translating this flood of data into {\em knowledge} 
+remains challenging.  One of my great strengths is the
+efficient assimilation of large multidimensional data 
+assemblages into a cohesive whole. 
+I use cutting-edge quantitative tools, including 
+SQL for data management, the R languages for data visualization,
+and statistical modeling, and C++ for high-performance simulation
+modeling. This pipeline allow me to rapidly explore novel data,
+and to then translate observations into testable hypotheses.
+
+
+At NCSU, I've also built ongoing mentoring and 
+collaborative relationships with several graduate students,
+using models combining population dynamics with 
+populaiton genetics models to 
+understand the consequences novel gene drive strategies. 
+Here, engineered organisms are released as part of vector 
+control campaigns. Our work uses simple models to identify
+ecological uncertainties with proposed genetic constructs
+and associated release plans.
 
 
 
@@ -103,18 +131,14 @@ vector control campaigns.
 %and statistical modeling, I employ a diverse yet robust 
 %conceptual toolset to 
 
+My involvement with the Santa Fe Institute has provided
+me with  
 Interdisciplinary collaboration relies upon a firm
 foundation in one's own area of expertise, along
 with a curiousity, trust, and willingness to learn
 from other experts.
 
-My research is facilitated by cutting-edge quantitative tools:
-the R and C++ programming languages for data visualization,
-numerical simulation, and statistical modeling, as well as SQL for 
-advanced data management. Through my ongoing 
-collaboration with professional software developers,
-I have learned the power of software
-development industry best practices \citep{spolsky2000joel}.
+, information-theoretic 
 
 Finally, I am a strong proponent in open, 
 reproducible research. 
